add modules progressBar, messageItems, sendRequest. Add comments to the JS code

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
       <div class="container"><div class="row">
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-8">
           <div class="head-logo">
-            <a class="head-logo__link" href="#"><img class="head-logo__img" src="images/head-logo.png" alt=""></a>
+            <a class="head-logo__link" href="http://morisar.16mb.com/"><img class="head-logo__img" src="images/head-logo.png" alt=""></a>
           </div>
         </div>
         <div class="col-lg-7 col-md-7 col-sm-5 hidden-xs">
@@ -146,7 +146,7 @@
                       <label class="autoParth-step-tabNav__link" for="rightW">Пр.руль</label>
                     </li>
                     <li role="presentation">
-                      <a class="autoParth-step-tabNav__link" href="https://www.yandex.ua/">Грузовые</a>
+                      <a class="autoParth-step-tabNav__link" href="">Грузовые</a>
                     </li>
                   </ul>
                   <!-- Tab panes -->
@@ -551,15 +551,18 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
     
-    <script src="scripts/jquery.autocomplete.min.js"></script>
     <!-- build:js scripts/main.js -->
-    <!-- <script src="scripts/main.js"></script> -->
-    <!-- <script src="scripts/query.js"></script> -->
+    <script src="scripts/jquery.autocomplete.min.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/query.js"></script>
     <script src="scripts/autocomplete.js"></script>
     <script src="scripts/MORISAR_init.js"></script>
     <script src="scripts/MORISAR.module.scrollTopBtn.js"></script>
     <script src="scripts/MORISAR.module.validationData.js"></script>
     <script src="scripts/MORISAR.module.validationCore.js"></script>
+    <script src="scripts/MORISAR.module.progressBar.js"></script>
+    <script src="scripts/MORISAR.module.sendRequest.js"></script>
+    <script src="scripts/MORISAR.module.messageItems.js"></script>
     <script src="scripts/MORISAR.facade.js"></script>
     <script src="scripts/MORISAR.CORE_mediator.js"></script>
     <!-- endbuild -->
